# Email_Automation

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
email_automation/: __init__.py  email_manager.py  send_email.py
email_automation/tests/: unit_test.py
tests/: unit_test.py
